--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Poo_Warchiefs)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Poo_Warchiefs main.cpp)
+add_executable(Poo_Warchiefs main.cpp clasaorc.h beast.h)
